--- a/less/base/_typography.less
+++ b/less/base/_typography.less
@@ -1,3 +1,5 @@
+
+@path-fonts: '../fonts';
 // font weight
 @fontWeightLight: 300;
 @fontWeightNormal: 400;
@@ -8,12 +10,9 @@
 @fontSizeSm: 14px;
 @fontSizeMd: 16px;
 @fontSizeLg: 18px;
-
-
 // colors
 @black: #000000;
 @white: #ffffff;
-@btnColor: #4b4c4d;
 @light-grey-bg: #f5f5f5;
 @navs-bg: #313131;
 @navs-active-bg: #a8a7a7;
@@ -42,74 +41,17 @@
 @textLinkColor: #e2e3e4;
 @red400: #f82f2f;
 @grey81: #1b1b1b;
-
-/*----- ADDED BY POURNAMI ----*/
 @title-color: #1b1b1b;
 @border-color: #dddddd;
 @dimGrey: #696969;
 @menuLinkColor: #b1b1b1;
 @mobile-menu-border: #222;
-
-//added by seena
 @headcolor: #1b1b1b;
 @wrappercolor: #cfcfcf;
 @formcolor: #4b4c4d;
 @buttoncolor: #3b5999;
-@forgotPasswordColor:#939393;
+@forgotPasswordColor: #939393;
 @formTextColor: #767676;
 @starColor: #e7838b;
 @borderColor: #dddddd;
-@courierColor:#dbdbd;
-//
-.font-face(Karbon-MediumItalic, Karbon-MediumItalic);
-.font-face(AldusNovaPro-Bold, AldusNovaProBold);
-.font-face(AldusNovaPro-BoldItalic, AldusNovaPro-BoldItalic);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(Karbon-MediumItalic, Karbon-MediumItalic);
-.font-face(AldusNovaPro-Bold, AldusNovaProBold);
-.font-face(AldusNovaPro-BoldItalic, AldusNovaPro-BoldItalic);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(Karbon-MediumItalic, Karbon-MediumItalic);
-.font-face(AldusNovaPro-Bold, AldusNovaProBold);
-.font-face(AldusNovaPro-BoldItalic, AldusNovaPro-BoldItalic);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(AldusNovaPro-Book, AldusNovaPro-Book);
-.font-face(Karbon-MediumItalic, Karbon-MediumItalic);
-.font-face(AldusNovaPro-Bold, AldusNovaProBold);
-.font-face(AldusNovaPro-BoldItalic, AldusNovaPro-BoldItalic);
-.font-face(AldusNovaPro-BookItalic, AldusNovaPro-BookItalic);
-.font-face(BodoniFLF-Bold, BodoniFLF-Bold);
-.font-face(BodoniFLF-BoldItalic, BodoniFLF-BoldItalic);
-.font-face(BodoniFLF-Italic, BodoniFLF-Italic);
-.font-face(BodoniFLF-Roman, BodoniFLF-Roman);
-.font-face(Karbon-Bold, Karbon-Bold);
-.font-face(Karbon-BoldItalic, Karbon-BoldItalic);
-.font-face(Karbon-Hairline, Karbon-Hairline);
-.font-face(Karbon-HairlineItalic, Karbon-HairlineItalic);
-.font-face(Karbon-Light, Karbon-Light);
-.font-face(Karbon-LightItalic,Karbon-LightItalic);
-.font-face(Karbon-Medium, Karbon-Medium);
-.font-face(Karbon-MediumItalic, Karbon-MediumItalic);
-.font-face(Karbon-Regular, Karbon-Regular);
-.font-face(Karbon-RegularItalic, Karbon-RegularItalic);
-.font-face(Karbon-Semibold, Karbon-Semibold);
-.font-face(Karbon-SemiboldItalic, Karbon-SemiboldItalic);
-.font-face(Karbon-Thin, Karbon-Thin);
-.font-face(Karbon-ThinItalic, Karbon-ThinItalic);
+@courierColor: #dbdbd;
