--- a/less/base/_mixins.less
+++ b/less/base/_mixins.less
@@ -2,112 +2,50 @@
 
 .border-box {
 	-webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .border-radius(@radius) {
-  -webkit-border-radius: @radius;
-  border-radius: @radius;
+	-webkit-border-radius: @radius;
+	-moz-border-radius: @radius;
+	border-radius: @radius;
 }
 
 .transform-origin (@origin) {
-    moz-transform-origin: @origin;
-    -o-transform-origin: @origin;
-    -ms-transform-origin: @origin;
-    -webkit-transform-origin: @origin;
-    transform-origin: @origin;
+	moz-transform-origin: @origin;
+	-o-transform-origin: @origin;
+	-ms-transform-origin: @origin;
+	-webkit-transform-origin: @origin;
+	transform-origin: @origin;
 }
 
 .transition(@val) {
-  -webkit-transition: @val;
-  -moz-transition:@val;
-  -o-transition:@val;
-  -ms-transition:@val;
-  transition:@val;
+	-webkit-transition: @val;
+	-moz-transition: @val;
+	-o-transition: @val;
+	-ms-transition: @val;
+	transition: @val;
 }
 
 .transform(@val) {
-  -webkit-transform: @val;
-  -moz-transform: @val;
-  -ms-transform: @val;
-  transform: @val;
+	-webkit-transform: @val;
+	-moz-transform: @val;
+	-ms-transform: @val;
+	transform: @val;
 }
 
-// .font-names
-// {
-//
-//     @font-face {
-//
-//         font-family: 'Karbon-MediumItalic';
-//         src: url('@{path-fonts}/Karbon-MediumItalic/Karbon-MediumItalic.eot') format('enbedded-opentype'),
-//              url('@{path-fonts}/Karbon-MediumItalic/Karbon-MediumItalic.ttf') format('truetype'),
-//              url('@{path-fonts}/Karbon-MediumItalic/Karbon-MediumItalic.woff') format('woff'),
-//              url('@{path-fonts}/Karbon-MediumItalic/Karbon-MediumItalic.svg') format('svg');
-//
-//     }
-//
-// }
-
 .font-face(@font-folder, @font-family) {
-  @font-face {
-    font-family: @font-family;
-		src: url('@{path-fonts}/@{font-folder}/@{font-family}.eot') format('enbedded-opentype'),
-		     url('@{path-fonts}/@{font-folder}/@{font-family}.ttf') format('truetype'),
-		     url('@{path-fonts}/@{font-folder}/@{font-family}.woff') format('woff'),
-		     url('@{path-fonts}/@{font-folder}/@{font-family}.svg') format('svg');
-  }
+	@font-face {
+		font-family: @font-family;
+		src: url('@{path-fonts}/@{font-folder}/@{font-family}.eot') format('enbedded-opentype'), url('@{path-fonts}/@{font-folder}/@{font-family}.ttf') format('truetype'), url('@{path-fonts}/@{font-folder}/@{font-family}.woff') format('woff'), url('@{path-fonts}/@{font-folder}/@{font-family}.svg') format('svg');
+	}
 }
 
 .font(@font) {
-   font-family: @font;
+	font-family: @font;
 }
-
-.clearfix {
-    *zoom: 1;
-    &:before,
-    &:after {
-        content: " ";
-        display: table;
-    }
-    &:after {
-        clear: both;
-    }
-}
-
-.full-width {
-  width: 100%;
-}
-
-.no-bg {
-  background: none;
-}
-
-.no-border {
-  border: none;
-}
-
-.no-margin {
-  margin: 0;
-}
-
-.no-padding {
-  padding: 0;
-}
-
-.common-style-font {
-  font-family: AldusNovaPro;
-  font-weight: @fontWeightLight;
-  font-size: 14px;
-  color: @black;
-}
-
-.zero-border {
-  border-radius: 0;
-}
-
 //media queries
-
 //resolutions
 @scr-360: 360px;
 @scr-480: 480px;
@@ -120,13 +58,130 @@
 @scr-1024: 1024px;
 
 .maxWidth(@maxWidth; @rules) {
-    @media only screen and (max-width: @maxWidth) {
-        @rules();
-    }
+	@media only screen and (max-width: @maxWidth) {
+		 @rules();
+	}
 }
 
 .minWidth(@minWidth; @rules) {
-    @media only screen and (min-width: @minWidth) {
-        @rules();
-    }
+	@media only screen and (min-width: @minWidth) {
+		 @rules();
+	}
+}
+//Common styles
+.clearfix {
+	*zoom: 1;
+
+	&:after,
+	&:before {
+		content: " ";
+		display: table;
+	}
+
+	&:after {
+		clear: both;
+	}
+}
+
+.full-width {
+	width: 100%;
+}
+
+.no-bg {
+	background: none;
+}
+
+.no-border {
+	border: none;
+}
+
+.no-margin {
+	margin: 0;
+}
+
+.no-padding {
+	padding: 0;
+}
+
+.common-style-font {
+	font-family: AldusNovaPro;
+	font-weight: @fontWeightLight;
+	font-size: 14px;
+	color: @black;
+}
+
+.zero-border {
+	border-radius: 0;
+}
+
+// fonts
+body {
+    font-size: 16px;
+    .font(AldusNovaPro-Book);
+}
+
+h2 {
+    font-size: 30px;
+}
+
+h3 {
+    font-size: 24px;
+}
+
+h4 {
+		font-size: 16px;
+}
+
+label {
+    font-size: 18px;
+		color: @formTextColor;
+}
+
+a {
+	text-decoration: none;
+	color: @formcolor;
+  font-size: 16px;	
+}
+span {
+	font-size: 16px;
+}
+
+button {
+
+	&.btn {
+    .border-radius(0);
+
+		&.btn-default {
+			background: @formcolor;
+		  border: 1px solid @formcolor;
+		  color: @white;
+		  text-transform: uppercase;
+		  border-radius: 0;
+		}
+
+		&.btn-primary {
+		    font-size: 22px;
+				&:hover, &:active, &:focus {
+					background: #888;
+				}
+		}
+&.btn-small {
+
+		    font-size: 16px;
+
+				&:hover, &:active, &:focus {
+					background: #888;
+				}
+		}
+
+
+	}
+}
+
+
+
+
+
+.btn-primary:hover {
+
 }
