--- a/css/style.css
+++ b/css/style.css
@@ -320,9 +320,21 @@ ul {
 .top-menu li {
   float: left;
   padding-left: 42px;
-  background-repeat: no-repeat;
-  background-position: 20px center;
   position: relative;
+  cursor: pointer;
+}
+.top-menu li:before {
+  content: '';
+  position: relative;
+  background: url(../images/sprites2.png) no-repeat -10px -8px;
+  width: 16px;
+  height: 18px;
+  position: absolute;
+  left: 22px;
+}
+.top-menu li:hover {
+  cursor: pointer;
+  text-decoration: none;
 }
 .top-menu li a {
   color: #000000;
@@ -330,6 +342,38 @@ ul {
   font-size: 14px;
   font-weight: 300;
   text-transform: uppercase;
+}
+.top-menu li.search:before {
+  background-position: -10px -34px;
+}
+.top-menu li.store:before {
+  background-position: -10px -60px;
+}
+.top-menu li.collection:before {
+  background-position: -10px -112px;
+}
+.top-menu li.bag:before {
+  background-position: -10px -139px;
+}
+.top-menu li.login.current:before,
+.top-menu li.login:hover:before {
+  background-position: -35px -8px;
+}
+.top-menu li.search.current:before,
+.top-menu li.search:hover:before {
+  background-position: -35px -34px;
+}
+.top-menu li.store.current:before,
+.top-menu li.store:hover:before {
+  background-position: -35px -60px;
+}
+.top-menu li.collection.current:before,
+.top-menu li.collection:hover:before {
+  background-position: -35px -112px;
+}
+.top-menu li.bag.current:before,
+.top-menu li.bag:hover:before {
+  background-position: -35px -139px;
 }
 .top-menu li .notify {
   background: #f82f2f;
@@ -344,21 +388,6 @@ ul {
   position: absolute;
   right: -8px;
   top: -6px;
-}
-.top-menu li.login {
-  background-image: url("../images/icon-login.png");
-}
-.top-menu li.search {
-  background-image: url("../images/icon-search.png");
-}
-.top-menu li.store {
-  background-image: url("../images/icon-store.png");
-}
-.top-menu li.collection {
-  background-image: url("../images/icon-collection.png");
-}
-.top-menu li.bag {
-  background-image: url("../images/icon-bag.png");
 }
 .top-menu li.current > .submenu {
   display: block;
@@ -399,6 +428,9 @@ ul {
   padding: 10px 0;
   float: none;
   border-bottom: 1px solid #dbdbdb;
+}
+.top-menu .submenu li:before {
+  background: none;
 }
 .logo-wrapper {
   position: relative;
