--- a/css/style.css
+++ b/css/style.css
@@ -1186,6 +1186,15 @@ ul {
   background-color: #313131;
   float: left;
 }
+.contact-section .enquiry .row {
+  display: flex;
+}
+@media only screen and (max-width: 768px) {
+  .contact-section .enquiry .row {
+    flex-direction: column;
+    width: 100%;
+  }
+}
 .contact-section .social-section {
   height: auto;
   padding-top: 40px;
@@ -1193,6 +1202,11 @@ ul {
 @media only screen and (max-width: 992px) {
   .contact-section .social-section {
     text-align: center;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .contact-section .social-section {
+    order: 3;
   }
 }
 .contact-section .social-section .follow {
@@ -1225,6 +1239,12 @@ ul {
     text-align: center;
   }
 }
+@media only screen and (max-width: 768px) {
+  .contact-section .subscribe-section {
+    order: 1;
+    border-bottom: 1px solid #ffffff;
+  }
+}
 .contact-section .subscribe-section .sign-up {
   color: #ffffff;
   font-size: 18px;
@@ -1251,7 +1271,7 @@ ul {
 }
 .contact-section .subscribe-section .submit {
   width: 20%;
-  background-color: #4b4c4d;
+  background-color: #f0f0f0;
   color: #ffffff;
   padding: 14px 20px;
   margin: 8px 0;
@@ -1341,9 +1361,16 @@ ul {
 .contact-section .radio-section .radio-text:checked ~ .gender {
   color: #ffffff;
 }
+@media only screen and (max-width: 768px) {
+  .contact-section .radio-section {
+    display: flex;
+    justify-content: center;
+  }
+}
 .contact-section .contact-address {
   padding-top: 42px;
   color: #ffffff;
+  font-family: AldusNovaPro;
   font-weight: 300;
   font-size: 18px;
 }
@@ -1356,9 +1383,22 @@ ul {
     text-align: center;
   }
 }
+@media only screen and (max-width: 768px) {
+  .contact-section .contact-address {
+    order: 2;
+    border-bottom: 1px solid #ffffff;
+    padding: 20px 0;
+  }
+}
 .contact-section .detail-list {
   width: 100%;
-  padding-top: 0;
+  padding-top: 20px;
+  border-top: 1px solid #bdbdbd;
+}
+@media only screen and (max-width: 768px) {
+  .contact-section .detail-list {
+    border: none;
+  }
 }
 .contact-section .detail-list span {
   padding-top: 20px;
@@ -1379,6 +1419,7 @@ ul {
 @media only screen and (max-width: 768px) {
   .contact-section .detail-list ul {
     display: none;
+    padding-left: 30px;
   }
 }
 @media only screen and (min-width: 768px) {
@@ -1387,8 +1428,6 @@ ul {
   }
 }
 .contact-section .detail-list .accordion-mobile {
-  margin-left: -30px;
-  margin-right: -30px;
   background: #454545;
   padding: 15px 30px;
   cursor: pointer;
@@ -1398,7 +1437,7 @@ ul {
   content: '+';
   font-size: 30px;
   position: absolute;
-  right: 0;
+  right: 20px;
 }
 .contact-section .detail-list .accordion-mobile.active:before {
   content: '';
