code review fixes

--- a/less/base/_mixins.less
+++ b/less/base/_mixins.less
@@ -105,9 +105,9 @@
 
 .common-style-font {
 	font-family: AldusNovaPro;
-	font-weight: @fontWeightLight;
+	font-weight: @font-weight__light;
 	font-size: 14px;
-	color: @black;
+	color: @color-black;
 }
 
 .zero-border {
@@ -134,13 +134,13 @@ h4 {
 
 label {
     font-size: 18px;
-		color: @formTextColor;
+		color: @form-text__color;
 }
 
 a {
 	text-decoration: none;
-	color: @formcolor;
-  font-size: 16px;	
+	color: @form-color;
+  font-size: 16px;
 }
 span {
 	font-size: 16px;
@@ -152,9 +152,9 @@ button {
     .border-radius(0);
 
 		&.btn-default {
-			background: @formcolor;
-		  border: 1px solid @formcolor;
-		  color: @white;
+			background: @form-color;
+		  border: 1px solid @form-color;
+		  color: @color-white;
 		  text-transform: uppercase;
 		  border-radius: 0;
 		}
