--- a/less/base/_typography.less
+++ b/less/base/_typography.less
@@ -1,57 +1,56 @@
 
 @path-fonts: '../fonts';
 // font weight
-@fontWeightLight: 300;
-@fontWeightNormal: 400;
-@fontWeightMedium: 500;
-@fontWeightBold: 600;
-@fontWeightHeavy: bold;
-@fontSizeXs: 12px;
-@fontSizeSm: 14px;
-@fontSizeMd: 16px;
-@fontSizeLg: 18px;
+@font-weight__light: 300;
+@font-weight__normal: 400;
+@font-weight__medium: 500;
+@font-weight__bold: 600;
+@font-weight__heavy: bold;
+@font-size__xs: 12px;
+@font-size__sm: 14px;
+@font-size__md: 16px;
+@font-size__lg: 18px;
 // colors
-@black: #000000;
-@white: #ffffff;
-@light-grey-bg: #f5f5f5;
-@navs-bg: #313131;
-@navs-active-bg: #a8a7a7;
-@white-text-color: #fff;
-@slider-btn-bg: #d3d3d3;
-@slider-btn: #ececec;
+@color-black: #000000;
+@color-white: #ffffff;
 @text-color: #545353;
-@btnBG: #f0f0f0;
-@spotBtn: #838383;
-@pagerColor: #6d6d6d;
-@grey400: #bdbdbd;
-@grey20: #333;
-@grey42: #6b6b6b;
-@grey47: #787878;
-@gray59: #969696;
-@grey65: #a6a6a6;
-@grey79: #c9c9c9;
-@grey80: #ccc;
-@grey120: #ADACAC;
-@grey121: #AAAAAA;
-@grey200: #818181;
-@grey81: #cfcfcf;
-@snow4: #8B8989;
-@textLightBlack: #090909;
-@top-bar-text-color: #f1f2f4;
-@textLinkColor: #e2e3e4;
-@red400: #f82f2f;
-@grey81: #1b1b1b;
-@title-color: #1b1b1b;
+@color-light-grey: #f5f5f5;
+@slider-btn-text__color: #ececec;
+@navs__background__color: #313131;
+@navs-active__background__color: #a8a7a7;
+@slider-btn-background__color: #d3d3d3;
+@btn-background__color: #f0f0f0;
+@spotlight-btn-background__color: #838383;
+@pager-color: #6d6d6d;
+@color-grey__400: #bdbdbd;
+@color-grey__20: #333;
+@color-grey__42: #6b6b6b;
+@color-grey__47: #787878;
+@color-grey__59: #969696;
+@color-grey__65: #a6a6a6;
+@color-grey__79: #c9c9c9;
+@color-grey__80: #ccc;
+@color-grey__81: #cfcfcf;
+@color-grey__120: #ADACAC;
+@color-grey__121: #AAAAAA;
+@color-grey__200: #818181;
+@color-grey__dim: #696969;
+@color-grey__light: #dbdbdb;
+@color-grey__dark: #4b4b4b;
+@color-snow__4: #8B8989;
+@color-black__light: #090909;
+@top-bar-text__color: #f1f2f4;
+@link-text__color: #e2e3e4;
+@link-menu__color: #b1b1b1;
+@color-red__400: #f82f2f;
+@title-text__color: #1b1b1b;
+@border__color: #dddddd;
+@border-menu__color: #222;
+@wrapper-color: #cfcfcf;
+@form-color: #4b4c4d;
+@button-color: #3b5999;
+@forgot-password__color: #939393;
+@form-text__color: #767676;
+@link-start__color: #e7838b;
 @border-color: #dddddd;
-@dimGrey: #696969;
-@menuLinkColor: #b1b1b1;
-@mobile-menu-border: #222;
-@headcolor: #1b1b1b;
-@wrappercolor: #cfcfcf;
-@formcolor: #4b4c4d;
-@buttoncolor: #3b5999;
-@forgotPasswordColor: #939393;
-@formTextColor: #767676;
-@starColor: #e7838b;
-@borderColor: #dddddd;
-@courierColor: #dbdbd;
+@courier-color: #dbdbd;
